--- a/src/app/geolocation/geolocation.page.html
+++ b/src/app/geolocation/geolocation.page.html
@@ -37,6 +37,14 @@
           {{longitude}}
         </ion-col>
       </ion-row>
+      <ion-row>
+        <ion-col size="3">
+          <b>Distancia</b>
+        </ion-col>
+        <ion-col>
+          {{distanciaKm}} km.
+        </ion-col>
+      </ion-row>
     </ion-grid>
   
   
